# doctomark

./: README.md  pyproject.toml
doctomark/: __init__.py  base.py  cli.py  docx.py  pdf.py  pptx.py  xlsx.py
doctomark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: gen_test_files.py
tests/test_files/: test.docx  test.pptx  test.xlsx
tests/test_files/out_docx/: test.md
tests/test_files/out_pdf/: test.md
tests/test_files/out_pptx/: test.md
tests/test_files/out_xlsx/: test.md
